--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,19 @@ dmypy.json
 
 .DS_Store*
 /assets/
+
+
+.idea/
+.vscode/
+node_modules/
+build
+.DS_Store
+*.tgz
+my-app*
+lerna-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.changelog
+.npm/
+yarn.lock
